--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,175 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+html {
+  height: 100%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 100%;
+  background-color: #fffefc;
+}
+
+body {
+  margin: 0;
+  min-height: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column;
+}
+
+a {
+  color: #0074d9;
+  text-decoration: none;
+}
+a:hover {
+  color: #7fdbff;
+  text-decoration: underline;
+}
+
+.nav-link a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0.25em 0;
+}
+h1 a, h2 a, h3 a, h4 a, h5 a {
+  color: inherit;
+  text-decoration: none;
+}
+h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+h3 {
+  font-size: 3rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.4rem;
+}
+
+#main {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  min-height: 100%;
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 40rem;
+  min-width: 18rem;
+  margin: 0 auto;
+}
+#main p {
+  line-height: 1.5em;
+}
+
+header {
+  font-weight: bold;
+  color: white;
+  background: #3d9970;
+  font-size: 0.9rem;
+  border-bottom: 4px solid #183d2c;
+}
+header nav {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -moz-box-pack: end;
+  box-pack: end;
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
+  -ms-justify-content: flex-end;
+  -o-justify-content: flex-end;
+  justify-content: flex-end;
+  -ms-flex-pack: end;
+  width: 100%;
+  max-width: 40rem;
+  min-width: 18rem;
+  margin: 0 auto;
+}
+header .spacer {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+header .nav-link a {
+  display: block;
+  padding: 0.5rem;
+  background-color: #3d9970;
+  -webkit-transition: background-color 0.15s ease-in;
+  -moz-transition: background-color 0.15s ease-in;
+  transition: background-color 0.15s ease-in;
+}
+header .nav-link a:hover, header .nav-link a:active, header .nav-link a.active {
+  background-color: #183d2c;
+}
+
+footer {
+  font-size: 0.8rem;
+  border-top: 4px solid #111111;
+  background-color: #2a2a2a;
+  color: white;
+  font-weight: 400;
+  padding: 0.5rem;
+}
+footer nav {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -ms-justify-content: space-between;
+  -o-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: justify;
+  width: 100%;
+  max-width: 40rem;
+  min-width: 18rem;
+  margin: 0 auto;
+}
