--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,3 +5,133 @@
 @import '_colors.scss';
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,200,700);
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
+$dark-olive: shade($olive, 60%);
+$dark-gray: shade($gray, 75%);
+
+@mixin content-inner {
+  width: 100%;
+  max-width: 40rem;
+  min-width: 18rem;
+  margin: 0 auto;
+}
+
+html {
+  height: 100%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 100%;
+  background-color: tint($yellow, 99%);
+}
+
+body {
+  margin: 0;
+  min-height: 100%;
+  @include display(flex);
+  @include flex-direction(column);
+}
+
+a {
+  color: $blue;
+  text-decoration: none;
+
+  &:hover {
+    color: $aqua;
+    text-decoration: underline;
+  }
+}
+
+.nav-link a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0.25em 0;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+h3 {
+  font-size: 3rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.4rem;
+}
+
+
+
+#main {
+  @include flex(1);
+  min-height: 100%;
+  padding: 0.5rem;
+  @include content-inner;
+
+  p {
+    line-height: 1.5em;
+  }
+}
+
+header {
+  font-weight: bold;
+  color: $white;
+  background: $olive;
+  font-size: 0.9rem;
+  border-bottom: 4px solid $dark-olive;
+
+  nav {
+    @include display(flex);
+    @include justify-content(flex-end);
+    @include content-inner;
+  }
+
+  .spacer {
+    @include flex(1);
+  }
+
+  .nav-link a {
+    display: block;
+    padding: 0.5rem;
+    background-color: $olive;
+    @include transition(background-color 0.15s ease-in);
+
+    &:hover, &:active, &.active {
+      background-color: $dark-olive;
+    }
+  }
+}
+
+footer {
+  font-size: 0.8rem;
+  border-top: 4px solid $black;
+  background-color: $dark-gray;
+  color: $white;
+  font-weight: 400;
+  padding: 0.5rem;
+
+  nav {
+    @include display(flex);
+    @include justify-content(space-between);
+    @include content-inner;
+  }
+}
