--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -135,3 +135,8 @@ footer {
     @include content-inner;
   }
 }
+
+@import "tabs.scss";
+@import "panels.scss";
+@import "draggable.scss";
+@import "spinner.scss";
