--- a/css/spinner.css
+++ b/css/spinner.css
@@ -13,6 +13,7 @@
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  margin: 2rem 0;
 }
 
 .buttons {
@@ -69,4 +70,8 @@
   font-family: Helvetica, Arial, sans-serif;
   padding: 0.4em 0.5em;
   border-radius: 3px;
+  outline: none;
+}
+.numeric-input:focus {
+  box-shadow: 0 0 2px 0 #50a37e;
 }
