--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -102,8 +102,9 @@ h5 {
 #main {
   @include flex(1);
   min-height: 100%;
-  padding: 0.5rem;
+  padding: 1rem;
   @include content-inner;
+  position: relative;
 
   p {
     line-height: 1.5em;
@@ -111,6 +112,8 @@ h5 {
 }
 
 header {
+  position: relative;
+  z-index: 1;
   background-color: $olive;
   @include noise;
   font-weight: bold;
@@ -119,6 +122,7 @@ header {
   border-bottom: 4px solid $dark-olive;
 
   nav {
+    padding: 0 0.5rem;
     @include display(flex);
     @include justify-content(flex-end);
     @include content-inner;
@@ -136,21 +140,26 @@ footer {
   border-top: 4px solid $black;
   color: $white;
   font-weight: 400;
-  padding: 0.5rem;
 
   nav {
+    padding: 1rem;
     @include display(flex);
     @include justify-content(space-between);
     @include content-inner;
   }
-}
 
-.slideout-wrapper {
-  height: 0;
+  a {
+    color: inherit;
+
+    &:hover {
+      text-decoration: underline;
+      color: inherit;
+    }
+  }
 }
 
 .slideout {
-  z-index: -1;
+  margin-bottom: -100%;
   position: relative;
   color: $white;
   font-weight: bold;
