--- a/sass/draggable.scss
+++ b/sass/draggable.scss
@@ -6,9 +6,18 @@
 
 .draggable {
   position: absolute;
-  top: 70px;
-  left: 0;
+  top: 110px;
+  left: 18px;
+  background-color: tint($yellow, 99%);
+  border-radius: 180px;
+  height: 179px;
+  width: 180px;
   &.icon {
     font-size: 12rem;
+  }
+
+  .fa {
+    position: relative;
+    top: -33px;
   }
 }
