--- a/css/panels.css
+++ b/css/panels.css
@@ -2,14 +2,11 @@
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 .panel {
-  display: none;
-}
-.panel.active {
-  display: block;
-}
+  display: none; }
+  .panel.active {
+    display: block; }
 
 /*# sourceMappingURL=panels.css.map */
