--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -86,7 +86,7 @@ a {
 
 .numeric-spinner-wrapper .button {
   display: block;
-  padding: 2px 10px;
+  padding: 0.225em 0.625em;
   font-size: 0.4em;
   text-decoration: none;
   border: 1px solid black;
