--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -217,3 +217,30 @@ a {
   border: 1px solid black;
   margin: 0 0 1px 0.5em;
 }
+
+.slider {
+  width: 500px;
+  position: relative;
+  border: 1px solid #bbb;
+  height: 20px;
+  margin: 5px 0 0 15px;
+  float: left;
+}
+
+.slider .thumb {
+  width: 20px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #222;
+}
+
+.slider-value {
+  border: 1px solid #bbb;
+  font-size: 1em;
+  width: 60px;
+  margin-bottom: 1em;
+  padding: 0.25em;
+  float: left;
+}
