--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -218,29 +218,107 @@ a {
   margin: 0 0 1px 0.5em;
 }
 
+.slider-example {
+  overflow: hidden;
+}
+
 .slider {
   width: 500px;
   position: relative;
   border: 1px solid #bbb;
   height: 20px;
-  margin: 5px 0 0 15px;
   float: left;
 }
 
-.slider .thumb {
+.slider.horizontal {
+  margin-top: 5px;
+}
+
+.slider .thumb, .slider-vertical {
   width: 20px;
-  height: 100%;
+  height: 20px;
   position: absolute;
   top: 0;
   left: 0;
   background: #222;
 }
 
-.slider-value {
+input {
+  margin-right: 15px;
   border: 1px solid #bbb;
   font-size: 1em;
   width: 60px;
   margin-bottom: 1em;
   padding: 0.25em;
   float: left;
+}
+
+.slider.vertical {
+  height: 200px;
+  width: 20px;
+  margin-bottom: 1em;
+}
+
+.slider.two-dimensional {
+  width: 200px;
+  height: 200px;
+}
+
+.colorpicker {
+  margin-bottom: 1em;
+  border: 1px solid #ddd;
+  float: left;
+  overflow: hidden;
+  background: white;
+  padding: 1em;
+}
+
+.colorpicker .grid {
+  background-image: url(../img/mask.png);
+  background-color: red;
+  border: 1px solid #ddd;
+  width: 150px;
+  height: 150px;
+  position: relative;
+  float: left;
+  margin-right: 1em;
+}
+
+.colorpicker .grid .thumb {
+  border: 2px solid white;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.colorpicker .hue {
+  background-image: url(../img/hue.png);
+  border: 1px solid #ddd;
+  float: left;
+  width: 15px;
+  height: 150px;
+  position: relative;
+}
+
+.colorpicker .hue .thumb {
+  width: 15px;
+  height: 5px;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.colorpicker-wrapper {
+  overflow: hidden;
+}
+
+.rectangle {
+  border: 1px solid #bbb;
+  width: 300px;
+  height: 300px;
 }
